--- a/package.json
+++ b/package.json
@@ -30,19 +30,19 @@
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
-    "@tsconfig/react-native": "^3.0.0",
+    "@tsconfig/react-native": "^3.0.2",
     "@types/lodash": "^4.14.199",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "@types/totp-generator": "^0.0.6",
     "babel-jest": "^29.2.1",
-    "eslint": "^8.19.0",
+    "eslint": "^8.54.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
     "postinstall-postinstall": "^2.1.0",
-    "prettier": "^2.4.1",
+    "prettier": "^3.1.0",
     "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "^5.3.2"
   },
   "engines": {
     "node": ">=20"
