--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-native": "0.72.7",
     "react-native-fs": "^2.20.0",
     "react-native-macos": "0.72.10",
-    "react-native-reanimated": "^3.6.0",
+    "react-native-reanimated": "3.6.1",
     "react-native-svg": "^13.9.0",
     "react-native-toast-notifications": "^3.4.0"
   },
@@ -37,6 +37,10 @@
     "@types/totp-generator": "^0.0.6",
     "babel-jest": "^29.2.1",
     "eslint": "^8.54.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
     "postinstall-postinstall": "^2.1.0",
