--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "macos": "react-native run-macos",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
+    "macos": "react-native run-macos",
     "pod": "cd macos && bundle exec pod install",
     "postinstall": "npx patch-package"
   },
@@ -17,9 +17,9 @@
     "lodash": "^4.17.21",
     "lz-string": "^1.5.0",
     "react": "18.2.0",
-    "react-native": "0.72.7",
+    "react-native": "0.73.1",
     "react-native-fs": "^2.20.0",
-    "react-native-macos": "0.72.10",
+    "react-native-macos": "^0.73.1",
     "react-native-reanimated": "3.6.1",
     "react-native-svg": "^13.9.0",
     "react-native-toast-notifications": "^3.4.0"
@@ -28,21 +28,20 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native/eslint-config": "^0.72.2",
-    "@react-native/metro-config": "^0.72.11",
-    "@tsconfig/react-native": "^3.0.2",
-    "@types/lodash": "^4.14.199",
-    "@types/react": "^18.0.24",
+    "@react-native/babel-preset": "^0.73.18",
+    "@react-native/eslint-config": "^0.73.1",
+    "@react-native/metro-config": "^0.73.2",
+    "@react-native/typescript-config": "^0.73.1",
+    "@types/lodash": "^4.14.202",
+    "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
-    "@types/totp-generator": "^0.0.6",
-    "babel-jest": "^29.2.1",
+    "babel-jest": "^29.6.3",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.76.8",
+    "jest": "^29.6.3",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^3.1.0",
     "react-test-renderer": "18.2.0",
