--- a/macos/Podfile
+++ b/macos/Podfile
@@ -11,6 +11,7 @@ target 'AuthApp-macOS' do
     :path => '../node_modules/react-native-macos',
     :hermes_enabled => true,
     :fabric_enabled => ENV['RCT_NEW_ARCH_ENABLED'] == '1',
+    :flipper_configuration => FlipperConfiguration.disabled,
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
