--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-native": "0.73.1",
     "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "github:software-mansion/react-native-gesture-handler#main",
     "react-native-macos": "^0.73.1",
     "react-native-reanimated": "3.6.1",
     "react-native-svg": "^13.9.0",
