--- a/biome.json
+++ b/biome.json
@@ -1,22 +1,12 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.4.1/schema.json",
+	"$schema": "https://biomejs.dev/schemas/1.5.2/schema.json",
 	"organizeImports": {
 		"enabled": true
 	},
 	"linter": {
 		"enabled": true,
 		"rules": {
-			"recommended": true,
-			"suspicious": {
-				"noExplicitAny": "warn"
-			},
-			"style": {
-				"useTemplate": "off",
-				"useSingleVarDeclarator": "off"
-			},
-			"complexity": {
-				"useArrowFunction": "off"
-			}
+			"recommended": true
 		}
 	}
 }
