--- a/package.json
+++ b/package.json
@@ -1,41 +1,37 @@
 {
-	"name": "authenticator-tauri",
-	"private": true,
-	"version": "1.3.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "tsc && vite build",
-		"preview": "vite preview",
-		"tauri": "tauri"
-	},
-	"dependencies": {
-		"@otplib/preset-browser": "^12.0.1",
-		"@radix-ui/react-icons": "^1.3.0",
-		"@radix-ui/react-label": "^2.0.2",
-		"@radix-ui/react-toast": "^1.1.5",
-		"@tauri-apps/api": "^1.5.2",
-		"class-variance-authority": "^0.7.0",
-		"clsx": "^2.1.0",
-		"lodash": "^4.17.21",
-		"lz-string": "^1.5.0",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"tailwind-merge": "^2.2.0",
-		"tailwindcss-animate": "^1.0.7"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "1.5.2",
-		"@tauri-apps/cli": "^1.5.8",
-		"@types/lodash": "^4.14.202",
-		"@types/node": "^20.11.5",
-		"@types/react": "^18.2.15",
-		"@types/react-dom": "^18.2.7",
-		"@vitejs/plugin-react": "^4.2.1",
-		"autoprefixer": "^10.4.17",
-		"postcss": "^8.4.33",
-		"tailwindcss": "^3.4.1",
-		"typescript": "^5.0.2",
-		"vite": "^5.0.0"
-	}
+  "name": "authenticator-tauri",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "tauri": "tauri"
+  },
+  "dependencies": {
+    "@otplib/preset-browser": "^12.0.1",
+    "@tauri-apps/api": "^1.5.2",
+    "lodash": "^4.17.21",
+    "lz-string": "^1.5.0"
+  },
+  "devDependencies": {
+    "@skeletonlabs/skeleton": "^2.7.1",
+    "@skeletonlabs/tw-plugin": "^0.3.1",
+    "@sveltejs/vite-plugin-svelte": "^3.0.1",
+    "@tauri-apps/cli": "^1.5.8",
+    "@tsconfig/svelte": "^5.0.2",
+    "@types/lodash": "^4.14.202",
+    "@types/node": "^20.11.5",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "postcss-load-config": "^5.0.2",
+    "svelte": "^4.2.8",
+    "svelte-check": "^3.4.6",
+    "tailwindcss": "^3.3.6",
+    "tslib": "^2.6.0",
+    "typescript": "^5.0.2",
+    "vite": "^5.0.0"
+  }
 }
