--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,7 +13,14 @@ edition = "2021"
 tauri-build = { version = "1.5", features = [] }
 
 [dependencies]
-tauri = { version = "1.5", features = [ "path-all", "dialog-open", "fs-write-file", "clipboard-write-text", "fs-read-file", "shell-open"] }
+tauri = { version = "1.5", features = [
+  "path-all",
+  "dialog-open",
+  "fs-write-file",
+  "clipboard-write-text",
+  "fs-read-file",
+  "shell-open",
+] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = "0.4.31"
