--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "dependencies": {
     "@otplib/preset-browser": "^12.0.1",
     "@tauri-apps/api": "^1.5.2",
-    "lodash": "^4.17.21",
-    "lz-string": "^1.5.0"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@skeletonlabs/skeleton": "^2.7.1",
@@ -27,6 +26,8 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "postcss-load-config": "^5.0.2",
+    "prettier": "^3.2.4",
+    "prettier-plugin-svelte": "^3.1.2",
     "svelte": "^4.2.8",
     "svelte-check": "^3.4.6",
     "tailwindcss": "^3.3.6",
