--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "lodash": "^4.17.21",
     "lz-string": "^1.5.0",
     "react": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "0.73.4",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "github:software-mansion/react-native-gesture-handler#main",
-    "react-native-macos": "^0.73.10",
+    "react-native-gesture-handler": "2.15.0",
+    "react-native-macos": "0.73.14",
     "react-native-reanimated": "3.6.1",
     "react-native-svg": "^13.9.0",
     "react-native-toast-notifications": "^3.4.0"
@@ -29,9 +29,9 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.73.19",
+    "@react-native/babel-preset": "0.73.21",
     "@react-native/eslint-config": "0.73.2",
-    "@react-native/metro-config": "0.73.3",
+    "@react-native/metro-config": "0.73.5",
     "@react-native/typescript-config": "0.73.1",
     "@types/lodash": "^4.14.202",
     "@types/react": "^18.2.6",
